feat(trade,node): 开通/生命周期/对账读 全面切到订阅凭证 (P4)
写路径(trade 主导)+ 读路径(node 凭证 facade), 服务已起验证跑在凭证模型上:
- node: ResourceServerLandingApi 加 occupyLanding/releaseLanding 资源原语
- trade 开通/退订(TradeSubscriptionServiceImpl): 占落地机 → 签发凭证 → 建订阅 → 发基础额度, 一事务原子, 冲突回滚换台; 退订释放落地机 + 凭证置吊销
- trade 生命周期(TradeLifecycleJob)/故障切换(FrontlineFailoverJob): 改凭证状态 / 换 server_id, 不再走 xray_client
- node XrayClientApiImpl 重写成读订阅凭证(连接信息/分配查询), trade 读消费者无需改动
- 退役 XrayClientProvisionApi(暂留待 P7 清理); 新增/改动代码遵循规范 + 去术语

旧 xray_client 表与列暂存; 计量仍走 member_plan_traffic(grant 待接); 待 P5 计量切 grant + P6/P7 清理 + P8 删旧表。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>